==> freshev/micropython/ports/gprs_a9/machine_hw_spi.c <==
#include <stdio.h>
#include "py/nlr.h"
#include "py/obj.h"
#include "py/runtime.h"
#include "py/binary.h"
#include "api_os.h"
#include "api_debug.h"
#include "api_hal_pm.h"
#include "api_hal_spi.h"
#include "modmachine.h"
#include "extmod/modmachine.h"
#define HAL_SPI_QTY (2)
#define HAL_SPI_CS_MAX_QTY (4)

static void machine_hw_spi_deinit_internal(machine_hw_spi_obj_t* self) {
    // Trace(1, "SPI: self->id = %d", self->id);
    // Trace(1, "SPI: self->cs = %d", self->cs);
    if(!SPI_Close(self->id)) mp_raise_SPIError("SPI deinit failure");
}

static void machine_hw_spi_init_internal(machine_hw_spi_obj_t *self, mp_arg_val_t args[]) {

    // if we're not initialized, then we're
    // implicitly 'changed', since this is the init routine
    bool changed = self->state != MACHINE_HW_SPI_STATE_INIT;

    machine_hw_spi_obj_t old_self = *self;

    if (args[ARG_cs].u_int != -1 && args[ARG_cs].u_int != self->cs) {
        self->cs = args[ARG_cs].u_int;
        changed = true;
    }

    if (args[ARG_baudrate].u_int != -1) {
        // calculate the actual clock frequency that the SPI peripheral can produce
        uint32_t baudrate = _get_SPI_FREQ(args[ARG_baudrate].u_int);
        if (baudrate != self->baudrate) {
            self->baudrate = baudrate;
            changed = true;
        }
    }

    if (args[ARG_polarity].u_int != -1 && args[ARG_polarity].u_int != self->polarity) {
        self->polarity = args[ARG_polarity].u_int;
        changed = true;
    }

    if (args[ARG_phase].u_int != -1 && args[ARG_phase].u_int != self->phase) {
        self->phase = args[ARG_phase].u_int;
        changed = true;
    }

    if (args[ARG_bits].u_int != -1 && args[ARG_bits].u_int <= 0) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid bits"));
    }

    if (args[ARG_bits].u_int != -1 && args[ARG_bits].u_int != self->bits) {
        self->bits = args[ARG_bits].u_int;
        changed = true;
    }

    if (args[ARG_firstbit].u_int != -1 && args[ARG_firstbit].u_int != self->firstbit) {
        self->firstbit = args[ARG_firstbit].u_int;
        changed = true;
    }

    if (args[ARG_sck].u_int != -2 && args[ARG_sck].u_int != self->sck) {
        self->sck = args[ARG_sck].u_int;
        changed = true;
    }

    if (args[ARG_mosi].u_int != -2 && args[ARG_mosi].u_int != self->mosi) {
        self->mosi = args[ARG_mosi].u_int;
        changed = true;
    }

    if (args[ARG_miso].u_int != -2 && args[ARG_miso].u_int != self->miso) {
        self->miso = args[ARG_miso].u_int;
        changed = true;
    }

    if (args[ARG_mode].u_int != -1 && args[ARG_mode].u_int != self->mode) {
        self->mode = args[ARG_mode].u_int;
        changed = true;
    }

    if (args[ARG_dma_delay].u_int != -1 && args[ARG_dma_delay].u_int != self->dma_delay) {
        self->dma_delay = args[ARG_dma_delay].u_int;
        changed = true;
    }

    if (args[ARG_debug].u_int != -1 && args[ARG_debug].u_int != self->debug) {
        self->debug = args[ARG_debug].u_int;
        changed = true;
    }

    if (args[ARG_debug_hst].u_int != -1 && args[ARG_debug_hst].u_int != self->debug_hst) {
        self->debug_hst = args[ARG_debug_hst].u_int;
        changed = true;
    }

    if (changed) {
        if (self->state == MACHINE_HW_SPI_STATE_INIT) {
            self->state = MACHINE_HW_SPI_STATE_DEINIT;
            machine_hw_spi_deinit_internal(&old_self);
        }
    } else {
        return; // no changes
    }

    if(self->mode == 0) {
        SPI_Config_t config = {
            .cs = self->cs,
            .txMode = SPI_MODE_DIRECT_POLLING,
            .rxMode = SPI_MODE_DIRECT_POLLING,
            .freq = self->baudrate,
            .line = SPI_LINE_4, // SPI_LINE_4 (duplex mode), SPI_LINE_3 - half-duplex
            .txOnly = false,
            .cpol = self->polarity, // SPI Clk Polarity
            .cpha = self->phase, // SPI Clk Phase
            .csActiveLow = 1, // SPI Cs Active Polarity
            .dataBits = self->bits,
            .irqHandler = NULL,
            .irqMask = {0,0,0,0,0}
        };
        if(!SPI_Init(self->id, config)) mp_raise_SPIError("SPI init failure");
    }
    if(self->mode == 1) {
        SPI_Config_t config = {
            .cs = self->cs,
            .txMode = SPI_MODE_DMA_POLLING,
            .rxMode = SPI_MODE_DMA_POLLING,
            .freq = self->baudrate,
            .line = SPI_LINE_4, // SPI_LINE_4 (duplex mode), SPI_LINE_3 - half-duplex
            .txOnly = false,
            .cpol = self->polarity, // SPI Clk Polarity
            .cpha = self->phase, // SPI Clk Phase
            .csActiveLow = 1, // SPI Cs Active Polarity
            .dataBits = self->bits,
            .irqHandler = NULL,
            .irqMask = {0,0,0,0,0}
        };
        if(!SPI_Init(self->id, config)) mp_raise_SPIError("SPI DMA init failure");
    }
     
#ifdef DEBUG_HAL
    for(int i = 0; i < HAL_SPI_QTY; i++) {
        HAL_SPI_PROP_T spi = g_halSpiPropArrayPtr[i];
        Trace_MemBlock(1, (uint8_t*)(g_halSpiPropArrayPtr + i), sizeof(HAL_SPI_PROP_T), 16);
        Trace(1, "SPI SPI%d start ===============================", i + 1);
    	for(int j = 0; j < HAL_SPI_CS_MAX_QTY; j++) {
        	HAL_SPI_SETTINGS_T cfg = spi.cfg[j];
    		Trace(1, "SPI SPI%d_CS%d", i + 1, j);
    		Trace(1, "SPI -------------------------");
        	Trace(1, "SPI cfg ctrl");
        	Trace(1, "SPI cfg ctrl ENABLE      : 0x%01X", (cfg.ctrl >> 0) & 1);
        	Trace(1, "SPI cfg ctrl enabledCS   : 0x%01X", (cfg.ctrl >> 1) & 3);
        	// skip bit ?
        	Trace(1, "SPI cfg ctrl inputEn     : 0x%01X", (cfg.ctrl >> 4) & 1);
        	Trace(1, "SPI cfg ctrl clkFallEdge : 0x%01X", (cfg.ctrl >> 5) & 1);
        	Trace(1, "SPI cfg ctrl clkDelay    : 0x%01X", (cfg.ctrl >> 6) & 3);
        	Trace(1, "SPI cfg ctrl doDelay     : 0x%01X", (cfg.ctrl >> 8) & 3);
        	Trace(1, "SPI cfg ctrl diDelay     : 0x%01X", (cfg.ctrl >> 10) & 3);
        	Trace(1, "SPI cfg ctrl csDelay     : 0x%01X", (cfg.ctrl >> 12) & 3);
        	Trace(1, "SPI cfg ctrl csPulse     : 0x%01X", (cfg.ctrl >> 14) & 3);
        	Trace(1, "SPI cfg ctrl frameSize   : 0x%01X", ((cfg.ctrl >> 16) & 0x1F) + 1);
        	Trace(1, "SPI cfg ctrl oeRatio     : 0x%01X", (cfg.ctrl >> 24) & 0x1F);
        	Trace(1, "SPI cfg ctrl inputSel    : 0x%01X", (cfg.ctrl >> 30) & 3);
        	
        	Trace(1, "SPI cfg cfg : 0x%08X", cfg.cfg);
        	Trace(1, "SPI cfg rxMode: 0x%04X", cfg.rxMode);
        	Trace(1, "SPI cfg txMode: 0x%04X", cfg.txMode);
        	Trace(1, "SPI cfg freq: %d", cfg.freq);
        	Trace(1, "SPI cfg bytesPerFrame: %d", cfg.bytesPerFrame);
        	Trace(1, "SPI cfg irqHandler: %p", cfg.irqHandler);
        	Trace(1, "SPI cfg irqMask: 0x%04X", cfg.irqMask);
        	break; // comment if need more
        }
        Trace(1, "SPI -----------------------");
        Trace(1, "SPI ctrl: 0x%08X", spi.ctrl);
        Trace(1, "SPI rxIfcCh: 0x%02X", spi.rxIfcCh);
        Trace(1, "SPI txIfcCh: 0x%02X", spi.txIfcCh);
        Trace(1, "SPI rxMode: 0x%04X (%d)", spi.rxMode, sizeof(spi.rxMode));
        Trace(1, "SPI txMode: 0x%04X (%d)", spi.txMode, sizeof(spi.txMode));
        Trace(1, "SPI activeStatus: 0x%04X (%d)", spi.activeStatus, sizeof(spi.activeStatus));
        Trace(1, "SPI irqHandler: %p", spi.irqHandler);
        Trace(1, "SPI requiredSysFreq: %d (%d)", spi.requiredSysFreq, sizeof(spi.requiredSysFreq));
        Trace(1, "SPI SPI%d end ===============================", i + 1);
        break; // comment if need more
    }
    
    /*
    Patch GPRS C SDK via patch-lod.py.
    Attention: doing this patch leads to loosing SPI_DATA_BITS_16 config
    Patch corrects SPI doDelay and diDelay for different SPI clock phase ("cpha" field in SPI_Config_t)
    if cpha == 0 doDelay should be 0, diDelay = 2 
    if cpha == 1 doDelay should be 0, diDelay = 1 

    In SPI_Init(...) make following changes:
    ---------------------------- first ---------------------------
    if (in_config.cpha != 0x0) {  hal_config.doDelay = 1; hal_config.diDelay = 1; }
    replace with --------------->
    if (in_config.cpha != 0x0) {  hal_config.diDelay = 1; } // correct doDelay = 0 for cpha=1

    8200876c 02  23           beqz       v1,LAB_82008772
    8200876e 07  d2           sw         v0,hal_config.doDelay (sp)
    82008770 08  d2           sw         v0,hal_config.diDelay (sp)
    82008772 14  96           lw         in_config_txMode ,hal_config +0x40 (sp)
    replace with --------------->
    8200876c 02  23           beqz       v1,LAB_82008772
    8200876e 00  65           nop
    82008770 08  d2           sw         v0,hal_config.diDelay (sp)
    82008772 14  96           lw         in_config_txMode ,hal_config +0x40 (sp)

    ---------------------------- second ---------------------------
  	if (config.dataBits == 16) hal_config.frameSize = 16; 
  	replace with --------------->
  	if (in_config.cpha == 0x0) hal_config.diDelay = 2; // correct diDelay for cpha=0

    820087d4 16  92           lw         dataBits ,hal_config +0x48 (sp)
    820087d6 10  72           cmpi       dataBits ,16
    820087d8 02  61           btnez      LAB_820087de
    820087da 10  6c           li         in_id ,16
    820087dc 0b  d4           sw         in_id ,hal_config.frameSize (sp)
    820087de 28  37           sll        in_config_rxMode ,spi_id ,0x2
    replace with --------------->
    820087d4 19  92           lw         dataBits ,0x64 (sp)
    820087d6 00  72           cmpi       dataBits ,0x0
    820087d8 02  61           btnez      LAB_820087de
    820087da 02  6c           li         in_id ,0x2
    820087dc 08  d4           sw         in_id ,0x20 (sp)
    820087de 28  37           sll        in_config_rxMode ,spi_id ,0x2
    */
#endif    

    self->state = MACHINE_HW_SPI_STATE_INIT;
    _spi_debug(self, "SPI%d_CS%d inited", self->id, self->cs);
}

mp_obj_t machine_hw_spi_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *all_args) {

    mp_arg_val_t args[MP_ARRAY_SIZE(spi_allowed_args)];
    mp_arg_parse_all_kw_array(n_args, n_kw, all_args, MP_ARRAY_SIZE(spi_allowed_args), spi_allowed_args, args);

    const mp_int_t spi_id = args[ARG_id].u_int;
    const mp_int_t spi_cs = args[ARG_cs].u_int;

    if ((spi_id == SPI1 || spi_id == SPI2) && (spi_cs == 0 || spi_cs == 1)) {
        machine_hw_spi_argcheck(args, machine_hw_spi_default_pins[(spi_id - 1) * 2 + spi_cs]);
    } else {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("SPI%d_CS%d doesn't exist"), spi_id, spi_cs);
    }

    // Replace -1 non-pin args with default values
    static const mp_int_t defaults[] = { 500000, 0, 0, 8, MICROPY_PY_MACHINE_SPI_MSB };
    for (int i = ARG_baudrate; i <= ARG_firstbit; i++) {
        if (args[i].u_int == -1) {
            args[i].u_int = defaults[i - ARG_baudrate];
        }
    }
    if (args[ARG_dma_delay].u_int < 1 || args[ARG_dma_delay].u_int > 100) {
    	mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("dma_delay should be between 1 and 100"));
    }

    machine_hw_spi_obj_t *self = &machine_hw_spi_obj[spi_id];
    self->id = spi_id;

    self->base.type = &machine_spi_type;

    machine_hw_spi_init_internal(self, args);

    return MP_OBJ_FROM_PTR(self);
}

static void machine_hw_spi_transfer(mp_obj_base_t *self_in, size_t len, const uint8_t *src, uint8_t *dest) {
    machine_hw_spi_obj_t *self = MP_OBJ_TO_PTR(self_in);
    // Round to nearest whole set of bits
    int bits_to_send = len * 8 / self->bits * self->bits;
    if (!bits_to_send) mp_raise_ValueError(MP_ERROR_TEXT("buffer too short"));
    _spi_transfer_internal(self, src, dest, len, self->debug_hst);
}
